ajuste titulo tabla

--- a/src/app/domains/products/pages/show/show.component.html
+++ b/src/app/domains/products/pages/show/show.component.html
@@ -10,7 +10,7 @@
         <th>Fecha</th>
         <th>Cantidad</th>
         <th>Tipo</th>
-        <th>Observaciones/th>
+        <th>Observaciones</th>
       </tr>
     </thead>
     <tbody class="table-body">
